clusters/prod/apps/monitoring/prometheus-auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-auth
  namespace: web
spec:
  basicAuth:
    secret: prometheus-auth
