clusters/prod/apps/monitoring/blackbox-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter-service
  namespace: web
  labels:
    app: blackbox-exporter
spec:
  selector:
    app: blackbox-exporter
  ports:
  - name: http
    port: 9115
    targetPort: 9115
    protocol: TCP
  type: ClusterIP
