clusters/prod/apps/monitoring/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: web
  labels:
    app: loki
spec:
  type: ClusterIP
  ports:
    - port: 3100
      targetPort: 3100
      name: http
    - port: 9096
      targetPort: 9096
      name: grpc
  selector:
    app: loki
