clusters/prod/apps/monitoring/postgres-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-exporter-service
  namespace: web
  labels:
    app: postgres-exporter
spec:
  selector:
    app: postgres-exporter
  ports:
  - name: http
    port: 9187
    targetPort: 9187
    protocol: TCP
  type: ClusterIP
